# BachelorProject

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CompileList.txt  DisplayImage  DisplayImage.cpp  FindAngles  Makefile  analizeOutput.m  cmake_install.cmake  flash.sh  no_controller_and_filter.txt  testfile.cpp
build-all/rodos/: CTestTestfile.cmake  cmake_uninstall-all.cmake  cmake_uninstall.cmake
build-all/rodos/test-suite/: CTestTestfile.cmake
filter_data/: filterX.txt  filterY.txt
linux_src/: Controller.cpp  Controller.h  DataPuffer.cpp  DataPuffer.h  DemoProgram.cpp  DemoProgram.h  EKF.cpp  EKF.h  Eigenbewegung.cpp  Eigenbewegung.h  FileWriter.cpp  FileWriter.h  Filter.cpp  Filter.h  FindAngles.cpp  ImageProcessing.cpp  ImageProcessing.h  KF.cpp  KF.h  KF_IMU.cpp  KF_IMU.h  LQR.cpp  LQR.h  Linear_regression_filter.cpp  Linear_regression_filter.h  PD_Controller.cpp  PD_Controller.h  PID_Controller.cpp  PID_Controller.h  P_Controller.cpp  P_Controller.h  Pass_filter.cpp  Pass_filter.h  PolePlacement.cpp  PolePlacement.h  Regulator.h  UARTInterface.cpp  UARTInterface.h  Weighted_mean_filter.cpp  Weighted_mean_filter.h  (+9 more)
rodos_src/: IMUReader.cpp  MotorController.cpp  testfile.cpp  util.h
rodos_src/include/: VL53L4CD_api.h  VL53L4CD_calibration.h  platform.h  topics.h  util.h
rodos_src/src/: Controller.cpp  Demo.cpp  IMUReader.cpp  IMU_Angles_Reader.cpp  LIDARReader.cpp  MotorController.cpp  MotorControllerABS.cpp  UARTTransmitter.cpp  VL53L4CD_api.cpp  VL53L4CD_calibration.cpp  platform.cpp  topics.cpp
